Fix T61049: Undo dynamic topology sculpt asserts